--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "cmake"]
 	path = cmake
-	url = git@github.com:mean00/arduino-cmake-stm32.git
+    url = https://github.com/mean00/arduino-cmake-stm32.git
     branch = develop2
