--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "freertos"]
 	path = freertos
 	url = https://github.com/mean00/MapleFreeRTOS1000.git
+[submodule "MapleFreeRTOS1000"]
+	path = MapleFreeRTOS1000
+	url = https://github.com/mean00/MapleFreeRTOS1000.git
