--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "MapleFreeRTOS1000"]
 	path = MapleFreeRTOS1000
 	url = https://github.com/mean00/MapleFreeRTOS1000.git
+[submodule "Rotary"]
+	path = Rotary
+	url = https://github.com/brianlow/Rotary.git
