--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Adafruit_GFX"]
 	path = Adafruit_GFX
 	url = https://github.com/adafruit/Adafruit-GFX-Library.git
+[submodule "MapleFreeRTOS1000"]
+	path = MapleFreeRTOS1000
+	url = https://github.com/mean00/MapleFreeRTOS1000.git
