[build] Switch to newer gcc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,10 @@ IF(NOT PLATFORM_PATH)
     MESSAGE(STATUS "Using default value for PLATFORM_PATH ${PLATFORM_PATH}")
 ENDIF(NOT PLATFORM_PATH)
 IF(NOT PLATFORM_TOOLCHAIN_PATH)
-    SET(PLATFORM_TOOLCHAIN_PATH "/home/fx/.arduino15/packages/arduino/tools/arm-none-eabi-gcc/4.8.3-2014q1/bin/")
+    # Use gcc 8.2.1 from MCU eclipse in nano mode
+    SET(ARDUINO_USE_NEWLIB 1)
+    SET(PLATFORM_TOOLCHAIN_PATH "/home/fx/Arduino_stm32/arm-none-eabi-gcc/download/gcc-arm-none-eabi-8.2.1-1.7/bin")
+   # SET(PLATFORM_TOOLCHAIN_PATH "/home/fx/.arduino15/packages/arduino/tools/arm-none-eabi-gcc/4.8.3-2014q1/bin/")
     MESSAGE(STATUS "Using default value for PLATFORM_TOOLCHAIN_PATH ${PLATFORM_TOOLCHAIN_PATH}")
 ENDIF(NOT PLATFORM_TOOLCHAIN_PATH)
 IF(NOT CUSTOM_LIB_DIR)
