--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,6 @@ include_directories(.)
 link_directories( ${CUSTOM_LIB_DIR})
 include_directories(adc)
 include_directories(captureEngine)
-include_directories(helpers)
 
 # FreeRTOS
 SET(PORTNAME Stm32duino)
@@ -94,8 +93,7 @@ ADD_SUBDIRECTORY(captureEngine/)
 generate_arduino_firmware(Dso150${EXTENSION} 
                 SKETCH dso150.ino
                 SRCS    myCode.cpp  dso_test_signal.cpp dso_control.cpp   dso_eeprom.cpp dso_calibrate.cpp dso_display.cpp   stopWatch.cpp dso_frequency.cpp 
-                dso_menu.cpp dso_menuEngine.cpp  dso_mainUI.cpp dso_menuButton.cpp fancyLock.cpp dso_autoSetup.cpp  dso_gfx.cpp dso_adc_gain.cpp cpuID.cpp embedded_printf/printf.c helpers/helper_pwm.cpp
-                helpers/myPwm.cpp
+                dso_menu.cpp dso_menuEngine.cpp  dso_mainUI.cpp dso_menuButton.cpp fancyLock.cpp dso_autoSetup.cpp  dso_gfx.cpp dso_adc_gain.cpp cpuID.cpp embedded_printf/printf.c 
                 PORT ${ARDUINO_DEFAULT_PORT}
                 BOARD_CPU ${ARDUINO_CPU}
                 )
