add speed to generated file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,10 @@ ELSE(USE_VANILLA_HW)
     ADD_DEFINITIONS("-DUSE_RXTX_PIN_FOR_ROTARY")
     SET(EXTENSION "${EXTENSION}_usb")
 ENDIF(USE_VANILLA_HW)
+
+math(EXPR MCU_SPEED_M "${MCU_SPEED}/1000000")
+SET(EXTENSION "${EXTENSION}_${MCU_SPEED_M}M")
+
  
  
 include_directories(MapleFreeRTOS1000//Source/include)
@@ -80,6 +84,7 @@ TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}TFT)
 TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}src)
 TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}qfpm3)
 TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}tests)
+
 
 # Summary
 MESSAGE(STATUS "Configuration:")
