begin hooking pySerial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ ADD_SUBDIRECTORY(Adafruit_TFTLCD_8bit_STM32)
 #
 IF(USE_USB)
     ADD_DEFINITIONS(-DUSE_USB)
-    SET(USB_SRCS src/dso_usb.cpp Arduino_STM32/STM32F1/libraries/USBComposite/USBComposite.cpp Arduino_STM32/STM32F1/libraries/USBComposite/USBCompositeSerial.cpp)
+    SET(USB_SRCS Arduino_STM32/STM32F1/libraries/USBComposite/USBComposite.cpp Arduino_STM32/STM32F1/libraries/USBComposite/USBCompositeSerial.cpp)
     include_directories(Arduino_STM32/STM32F1/libraries/USBComposite)
 ELSE(USE_USB)
     SET(USB_SRCS usb_stubs.c)
