--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,10 @@ SET(SRCS
     ui/dso_menuEngine.cpp
     dso_test_signal.cpp
     ) 
+IF(USE_USB)
+    SET(SRCS ${SRCS} dso_usb.cpp dso_usbCommands.cpp)
+ENDIF(USE_USB)
+
 generate_arduino_library(${libPrefix}src 
                             SRCS ${SRCS}
                             BOARD ${ARDUINO_DEFAULT_BOARD}
